# typst-rb

./: .gitignore  .gitmodules  Cargo.toml  Gemfile  README.md  README.typ  Rakefile  typst.gemspec
.github/workflows/: gem-push.yml
ext/typst/: Cargo.toml  extconf.rb
ext/typst/src/: compiler.rs  download.rs  lib.rs  query.rs  world.rs
lib/: base.rb  document.rb  pdf.rb  query.rb  svg.rb  typst.rb
lib/formats/: html.rb  html_experimental.rb  pdf.rb  png.rb  svg.rb
test/: invoice.typ  sys_inputs_example.typ  test.typ  text_processor.rb  typst_test.rb
test/template_with_font_and_icon/: main.typ  template.typ
