[package]
name = "typst"
version = "0.15.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "std",
] }
codespan-reporting = "0.13"
comemo = "0.5.1"
dirs = "5" #
ecow = "0.2"
env_logger = "0.10.1" #
env_proxy = "0.4" #
filetime = "0.2.22" #
flate2 = "1" #
fontdb = "0.15.0" #
log = "0.4.20" #
magnus = { version = "0.8.2" }
pathdiff = "0.2"
same-file = "1" #
siphasher = "1.0" #
tar = "0.4" #
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
typst = "0.15.0"
typst-library  = "0.15.0"
typst-kit = { version = "0.15.0", features = [
    "embedded-fonts",
    "scan-fonts",
    "system-downloader",
    "system-packages",
    "vendor-openssl",
] }
typst-pdf = "0.15.0"
typst-svg = "0.15.0"
typst-html = "0.15.0"
typst-render = "0.15.0"
typst-eval = "0.15.0"
typst-layout = "0.15.0"
ureq = { version = "2", default-features = false, features = [
    "gzip",
    "socks-proxy",
] }
walkdir = "2.4.0"

# enable rb-sys feature to test against Ruby head. This is only needed if you
# want to work with the unreleased, in-development, next version of Ruby
rb-sys = { version = "0.9.128", default-features = false, features = ["stable-api-compiled-fallback"] }